webkit2gtk (2.15.3-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Alberto Garcia <berto@igalia.com>  Fri, 20 Jan 2017 11:04:52 +0200

webkit2gtk (2.15.2-1) experimental; urgency=medium

  * New upstream development release.
  * Verify GPG signature of the upstream tarball:
    + debian/upstream/signing-key.asc:
      - Add key file.
    + debian/watch:
      - Add pgpsigurlmangle option.
  * Refresh all patches.
  * debian/control:
    + Add build dependencies on libgeoclue-2-dev and libgcrypt20-dev, and
      remove libgnutls28-dev.
  * debian/rules:
    + Use the NEWS file as the upstream changelog.

 -- Alberto Garcia <berto@igalia.com>  Mon, 21 Nov 2016 20:34:28 +0200

webkit2gtk (2.15.1-1) experimental; urgency=medium

  * New upstream development release.
  * debian/patches/fix-ftbfs-armel.patch:
    + The previous update broke this patch, fix it now.
  * Refresh all other patches.
  * debian/rules:
    + Don't use the gold linker in kFreeBSD, its version of libxslt is
      still affected by #801989. We should be able to revert this change
      once we have libxslt >= 1.1.29.
    + Enable gold again in mips and mipsel now that #834147 is fixed and
      we have binutils 2.27-9.
  * debian/watch, debian/gbp.conf:
    + Update for 2.15.x packages in experimental.
  * debian/libwebkit2gtk-4.0-37.symbols:
    + Update.

 -- Alberto Garcia <berto@igalia.com>  Wed, 26 Oct 2016 17:43:28 +0300

webkit2gtk (2.14.1-1) unstable; urgency=medium

  * New upstream release.
  * debian/patches/install-minibrowser.patch:
    + Drop patch, this has been merged upstream.
  * debian/rules:
    + Set -DENABLE_MINIBROWSER=ON.
  * debian/libjavascriptcoregtk-4.0-bin.install:
    + Install the jsc executable in /usr/bin.
  * debian/patches/fix-ftbfs-armel.patch:
    + Add output message telling whether we need to build Atomics.cpp.
  * debian/control:
    + Update Vcs-* links (thanks, Jeremy Bicha) (Closes: #840483).
  * debian/compat: