@@ -1,6 +1,7 @@
 webkit2gtk (2.15.3-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Refresh all patches.
 
  -- Alberto Garcia <berto@igalia.com>  Fri, 20 Jan 2017 11:04:52 +0200
 
